--- a/src/Components/Pagination/Pagination.module.scss
+++ b/src/Components/Pagination/Pagination.module.scss
@@ -6,12 +6,22 @@
   top: -50px;
   margin-left: 3%;
   width: 120px;
+  @media (max-width: 768px) {
+    position: absolute;
+    top: 88%;
+    margin: 0;
+    width: 56px;
+    height: 56px;
+  }
 
   .pageCounter {
     text-align: left;
     line-height: 18px;
     @include text($mainTitleColor, $headerFont, 0.7rem, 400);
     margin-bottom: 20px;
+    @media (max-width: 768px) {
+      margin-bottom: 4px;
+    }
   }
 
   .btnContainer {
