--- a/src/Components/Slider/Slider.module.scss
+++ b/src/Components/Slider/Slider.module.scss
@@ -5,23 +5,44 @@
   width: 100%;
   cursor: grab;
   position: relative;
-    .itemContainer {
-      max-width: 400px;
-      min-width: 200px;
-      min-height: 90px;
-      margin: 0 46px 70px;
-      .title {
-        @include text($secondTitleColor, $mainFont, 1.25rem, 400);
-        line-height: 120%;
-        text-transform: uppercase;
-        text-align: left;
-        margin-bottom: 15px;
-      }
-      .description {
-        @include text($textColor, $headerFont, 1rem, 400) ;
-        line-height: 150%;
-        text-align: left;
-        margin-bottom: 34px;
+  @media (max-width: 768px) {
+    position: static;
+    margin-top: 20px;
+  }
+
+  .itemContainer {
+    max-width: 400px;
+    min-width: 200px;
+    min-height: 90px;
+    margin: 0 46px 70px;
+    @media (max-width: 768px) {
+      min-width: 80px;
+      margin: 0;
+      min-height: 340px;
+    }
+
+    .title {
+      @include text($secondTitleColor, $mainFont, 1.25rem, 400);
+      line-height: 120%;
+      text-transform: uppercase;
+      text-align: left;
+      margin-bottom: 15px;
+      @media (max-width: 768px) {
+        font-size: 0.8rem;
       }
     }
+
+    .description {
+      @include text($textColor, $headerFont, 1rem, 400) ;
+      line-height: 150%;
+      text-align: left;
+      margin-bottom: 34px;
+      @media (max-width: 768px) {
+        font-size: 0.7rem;
+        line-height: 145%;
+        margin-bottom: 70px;
+      }
+    }
+  }
 }
+
