--- a/src/Components/VectorContainer/TitleBlock/TitleBlock.module.scss
+++ b/src/Components/VectorContainer/TitleBlock/TitleBlock.module.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables";
-@import "../../../styles/mixins";
+@import '../../../styles/variables';
+@import '../../../styles/mixins';
 
 .divContainer {
   @include sizeBlock(487px, 134px);
@@ -8,9 +8,10 @@
   @media screen and (max-width: 1162px) {
     top: 150px;
   }
-  @media screen and (max-width: 630px) {
-    padding-left: 32px;
-    padding-top: 6px;
+  @media (max-width: 768px) {
+    position: static;
+    @include sizeBlock(130px, 100%);
+    padding: 59px 0;
   }
 
   &:before {
@@ -25,9 +26,13 @@
     line-height: 67px;
     text-align: left;
     letter-spacing: -0.01em;
-    @media screen and (max-width: 630px) {
-      font-size: 2.4rem;
-      line-height: 52px;
+    @media (max-width: 768px) {
+      font-size: 1.2rem;
+      line-height: 120%;
+    }
+    @media (max-width: 400px) {
+      font-size: 1rem;
+      line-height: 120%;
     }
   }
 }
