--- a/src/Components/VectorContainer/VectorContainer.module.scss
+++ b/src/Components/VectorContainer/VectorContainer.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/variables";
-@import "src/styles/mixins";
+@import 'src/styles/variables';
+@import 'src/styles/mixins';
 
 .container {
   background-color: $backgroundColor;
@@ -9,6 +9,10 @@
     margin-left: 16.6%;
     width: 75%;
     position: relative;
+    @media (max-width: 768px) {
+      width: 87.5%;
+      margin: 0 auto;
+    }
 
     &:before {
       @include pseudoEl();
@@ -21,7 +25,7 @@
     }
 
     .inner_content_container {
-      width: 100%;
+      //width: 100%;
       min-height: 100vh;
       position: relative;
 
@@ -33,6 +37,9 @@
       &:after {
         @include pseudoEl();
         @include vectorHorizon(0, $heightCenter);
+        @media (max-width: 768px) {
+          top: 293px;
+        }
       }
     }
   }
