--- a/src/Components/Slider/Slider.module.scss
+++ b/src/Components/Slider/Slider.module.scss
@@ -9,7 +9,14 @@
     position: static;
     margin-top: 20px;
   }
+  .category{
+    @include text($textColor,$headerFont,1rem, 400);
+    line-height: 150%;
+    position: absolute;
+    top:-66px;
+    left: 0;
 
+  }
   .itemContainer {
     max-width: 400px;
     min-width: 200px;
