--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,19 @@ text-align: center;
 a {
 text-decoration: none;
 }
+
+/*
+input[type=radio] {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  padding: 0 1em 0 0;
+  margin: 0;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+   outline: none;
+}
+ */
