change mobile layout for slideBar

--- a/src/Components/SliderBar/SlideBar.module.scss
+++ b/src/Components/SliderBar/SlideBar.module.scss
@@ -5,7 +5,7 @@
   position: absolute;
   width: 120px;
   height: 40px;
-  bottom: 0;
+  bottom: 24px;
   left: 37%;
   @include flexStyle(row, space-around, center);
 
