--- a/src/Components/Slider/Slider.module.scss
+++ b/src/Components/Slider/Slider.module.scss
@@ -25,7 +25,6 @@
     @media (max-width: 768px) {
       min-width: 80px;
       margin: 0;
-      min-height: 340px;
     }
 
     .title {
@@ -47,7 +46,10 @@
       @media (max-width: 768px) {
         font-size: 0.7rem;
         line-height: 145%;
-        margin-bottom: 70px;
+      }
+      @media (max-width: 300px) {
+        font-size: 0.65rem;
+        line-height: 130%;
       }
     }
   }
